--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "lodash": "^3.3.1",
     "stringify": "^3.1.0",
     "swig": "^1.4.2",
-    "watchify": "^3.2.3"
+    "watchify": "^3.2.3",
+    "babelify": "^7.2.0"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.6.0"
   }
 }
